--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -46,12 +46,12 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=Gamepad_LeftY,Scale=1.000000)
-+AxisMappings=(AxisName="Left Track Throttle",Key=Gamepad_LeftTriggerAxis,Scale=1.000000)
-+AxisMappings=(AxisName="Right Track Throttle",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
-+AxisMappings=(AxisName="Left Track Throttle",Key=Q,Scale=1.000000)
-+AxisMappings=(AxisName="Right Track Throttle",Key=E,Scale=1.000000)
 +AxisMappings=(AxisName="TankMoveForward",Key=Gamepad_RightY,Scale=1.000000)
 +AxisMappings=(AxisName="TankMoveRight",Key=Gamepad_RightX,Scale=1.000000)
++AxisMappings=(AxisName="TankMoveForward",Key=W,Scale=-1.000000)
++AxisMappings=(AxisName="TankMoveForward",Key=S,Scale=1.000000)
++AxisMappings=(AxisName="TankMoveRight",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="TankMoveRight",Key=A,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
